--- a/gameoflife-web/Jenkinsfile
+++ b/gameoflife-web/Jenkinsfile
@@ -18,12 +18,12 @@ pipeline {
         }
         stage('Create Image') { 
             steps {
-                sh 'docker build'  
+                sh 'docker build -t boiaz/gameoflife:latest'  
             }
         }
         stage('Push Image Image') { 
             steps {
-                sh 'docker image push gameoflife'  
+                sh 'docker push boiaz/gameoflife:latest'  
             }
         }                  
     }
