--- a/gameoflife-web/Jenkinsfile
+++ b/gameoflife-web/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Create Image') { 
             steps {
-                sh 'docker build -t boiaz/gameoflife:latest'  
+                sh 'docker build -t boiaz/gameoflife:latest .'  
             }
         }
         stage('Push Image Image') { 
