--- a/gameoflife-web/Jenkinsfile
+++ b/gameoflife-web/Jenkinsfile
@@ -28,8 +28,13 @@ pipeline {
         }
         stage('Start Acceptance Environment') { 
             steps {
-                sh 'ansible-playbook -vvvvv /etc/ansible/ec2-basic.yml'  
+                sh 'ansible-playbook -vvvvv /etc/ansible/ec2-basic.yml -o StrictHostKeyChecking=no'  
             }
-        }                    
+        } 
+        stage('functionality test') { 
+            steps {
+                sh 'java -jar /home/boiaz/Documents/goltest.jar'  
+            }
+        }                   
     }
 }
