--- a/gameoflife-web/Jenkinsfile
+++ b/gameoflife-web/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
         }
         stage('Start Acceptance Environment') { 
             steps {
-                sh 'ansible-playbook -vvvvv /etc/ansible/ec2-basic.yml -o StrictHostKeyChecking=no'  
+                sh 'ansible-playbook -vvvvv -o StrictHostKeyChecking=no /etc/ansible/ec2-basic.yml'  
             }
         } 
         stage('functionality test') { 
