--- a/gameoflife-web/Jenkinsfile
+++ b/gameoflife-web/Jenkinsfile
@@ -27,17 +27,8 @@ pipeline {
             }
         }
         stage('Start Acceptance Environment') { 
-        def ret = sh(
-        returnStatus: true, // This is the key bit!
-        script: '''if [ "$foo" = bar ]; then exit 2; else exit 1; fi'''
-        )
-        if (ret == 4) {
-        currentBuild.result = 'UNSTABLE'
-        } else if (ret != 0) {
-        currentBuild.result = 'FAILURE'
-        error("Stage failed with exit code ${ret}")
             steps {
-                sh 'ansible-playbook -vvvvv /etc/ansible/ec2-basic.yml'  
+                sh 'ansible-playbook -vvv /etc/ansible/ec2-basic.yml'  
             }
         } 
         stage('functionality test') { 
