--- a/gameoflife-web/Jenkinsfile
+++ b/gameoflife-web/Jenkinsfile
@@ -26,19 +26,9 @@ pipeline {
                 sh 'docker push boiaz/gameoflife:latest'  
             }
         }
-        stage('Start Acceptance Environment') { 
+        stage('Acceptance Environment') { 
             steps {
                 sh 'ansible-playbook -vvv /etc/ansible/ec2-basic.yml'  
-            }
-        }
-        stage('functionality test') { 
-            steps {
-                sh 'java -jar /home/boiaz/Documents/goltest.jar'  
-            }
-        }
-        stage('Terminate Instance') {
-            steps {
-                sh 'ansible-playbook /etc/ansible/ec2-terminate.yml'
             }
         }
         stage('push to production') { 
